--- a/app/views/admin/tweets/index.html.erb
+++ b/app/views/admin/tweets/index.html.erb
@@ -22,7 +22,7 @@
     <h4><%= link_to "@#{tweet.user.name}" , tweets_user_path(tweet.user)%>, <%= tweet.created_at.strftime("%F")%>, <%=tweet.created_at.strftime(" %H:%M ")%></h4>
       <p><%= truncate(tweet.description, length: 300)%></p>
      <div> 
-<%= link_to "Replay(#{tweet.replies_count})" , replies_tweet_path(tweet),class:"btn btn-link"%>
+<%= link_to "Replay(#{tweet.replies_count})" , tweet_replies_path(tweet),class:"btn btn-link"%>
 
        <%= render partial: "shared/like", locals: {tweet: tweet} %> 
               </div>
