--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -31,9 +31,8 @@
     <div class="col-xs-12 col-sm-7 col-md-8 col-lg-10">
     <h4><%= link_to "@#{tweet.user.name}" , tweets_user_path(tweet.user)%>, <%= tweet.created_at.strftime("%F")%>, <%=tweet.created_at.strftime(" %H:%M ")%></h4>
       <p><%= truncate(tweet.description, length: 300)%></p>
-     <div> 
-<%= link_to "Replay(#{tweet.replies_count})" , replies_tweet_path(tweet),class:"btn btn-link"%>
-
+     <div>  
+<%= link_to "Reply(#{tweet.replies_count})" , tweet_replies_path(tweet),class:"btn btn-link"%>
        <%= render partial: "shared/like", locals: {tweet: tweet} %> 
               </div>
     </div>
@@ -57,7 +56,7 @@
                 <%= image_tag user.avatar ,class:"img-circle img-responsive img-profile"%>
             </div>
             <div class="col-md-8 col-lg-8">
-              <h4><%= "@#{user.name}" %></h4>
+              <h4><%= link_to "@#{user.name}" , tweets_user_path(user)%></h4>
               <p><%= truncate(user.introduction, length: 300)%></p>
                <%= render partial: "shared/follow", locals: {users: user}%>
             </div>
