--- a/app/views/users/tweets.html.erb
+++ b/app/views/users/tweets.html.erb
@@ -22,7 +22,7 @@
 <!--tweets-->
   <div class="col-md-8 col-lg-8 container">
     <h3>Tweets</h3>
-    <% @user_tweets.each do |tweet| %>
+    <% @tweets.each do |tweet| %>
     <div id="tweets-list" >
     <div class="row">
       
@@ -37,7 +37,7 @@
     <div class="col-xs-12 col-sm-7 col-md-8 col-lg-10">
     <h4><%= link_to "@#{tweet.user.name}" , tweets_user_path(tweet.user)%>, <%= tweet.created_at.strftime("%F")%>, <%=tweet.created_at.strftime(" %H:%M ")%></h4>
       <p><%= truncate(tweet.description, length: 300)%></p>
-     <div> <%= link_to "Replay(#{tweet.replies_count})" , replies_tweet_path(tweet),class:"btn btn-link"%>
+     <div> <%= link_to "Replay(#{tweet.replies_count})" , tweet_replies_path(tweet),class:"btn btn-link"%>
       <%= render partial: "shared/like", locals: {tweet: tweet} %> 
               </div>
     </div>
